--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mcswajl.github.io/photo-port",
+  "homepage": "http://mcswajl.github.io/React-Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
